# brave-core

./: .travis.yml  DEPS  Jenkinsfile
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd  os_settings_strings.grdp  profiles_strings.grdp  profiles_strings_override.grdp  settings_brave_strings.grdp  settings_strings.grdp
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_cosmetic_resources_tab_helper.cc  brave_cosmetic_resources_tab_helper.h  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  brave_tab_helpers.cc  sources.gni
browser/ui/sidebar/: BUILD.gn  sidebar.h  sidebar_controller.cc  sidebar_controller.h  sidebar_model.cc  sidebar_model.h  sidebar_model_data.cc  sidebar_model_data.h  sidebar_service_factory.cc
common/: network_constants.cc  network_constants.h
components/sidebar/: BUILD.gn  pref_names.h  sidebar_item.cc  sidebar_item.h  sidebar_service.cc  sidebar_service.h
components/signin/internal/identity_manager/: BUILD.gn  brave_account_fetcher_service.cc  brave_account_fetcher_service.h  brave_primary_account_manager.h  brave_profile_oauth2_token_service.h
components/signin/public/identity_manager/: BUILD.gn  brave_accounts_cookie_mutator.cc  brave_accounts_cookie_mutator.h  brave_accounts_mutator.cc  brave_accounts_mutator.h  brave_diagnostics_provider.cc  brave_diagnostics_provider.h  brave_identity_manager.cc  brave_identity_manager.h  brave_primary_account_mutator.cc  brave_primary_account_mutator.h
patches/: build-config-android-rules.gni.patch  chrome-VERSION.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-ntp-NewTabPageLayout.java.patch  chrome-browser-notifications-notification_platform_bridge_mac.mm.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-resources-settings-site_settings-category_default_setting.js.patch  chrome-browser-sync-profile_sync_service_factory.cc.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-content_settings-content_setting_image_model.cc.patch  chrome-browser-ui-views-bookmarks-bookmark_bubble_view.cc.patch  chrome-browser-ui-views-frame-browser_view.h.patch  chrome-browser-ui-views-location_bar-location_bar_view.cc.patch  chrome-browser-ui-views-profiles-avatar_toolbar_button.cc.patch  components-content_settings-core-browser-content_settings_default_provider.cc.patch  components-content_settings-core-common-content_settings_types.h.patch  components-permissions-permission_uma_util.cc.patch  components-sync_device_info-device_info_sync_bridge.cc.patch  content-browser-frame_host-navigation_request.cc.patch  (+3 more)
script/: download_rust_deps.py
(+148 files in other folders)
