# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

source_set("sidebar") {
  sources = [
    "features.cc",
    "features.h",
    "pref_names.h",
    "sidebar_item.cc",
    "sidebar_item.h",
    "sidebar_service.cc",
    "sidebar_service.h",
  ]

  deps = [
    "//base",
    "//components/prefs",
    "//url",
  ]
}
