# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

if (is_android) {
  import("//build/config/android/rules.gni")
}

source_set("identity_manager") {
  sources = [
    "brave_accounts_cookie_mutator.cc",
    "brave_accounts_cookie_mutator.h",
    "brave_accounts_mutator.cc",
    "brave_accounts_mutator.h",
    "brave_diagnostics_provider.cc",
    "brave_diagnostics_provider.h",
    "brave_identity_manager.cc",
    "brave_identity_manager.h",
  ]

  public_deps = [
    "//base",
  ]
}
